Fix bug 1156641 - mobile nav covered on events page
The Events Calendar's CSS sets z-index:101 on the sort form but our mobile nav was only z-index:100 (usually more than enough but this is the kind of stuff you get with plugins). This change moves the nav up to 199.

--- a/themes/QMO6/style.css
+++ b/themes/QMO6/style.css
@@ -1626,7 +1626,7 @@ input:-moz-placeholder {
     padding: 5px;
     background: #fff;
     border-radius: 5px;
-    z-index: 100;
+    z-index: 199;
   }
   #nav-main-list li {
     display: block;
